--- a/_includes/indexlayout.njk
+++ b/_includes/indexlayout.njk
@@ -15,6 +15,8 @@ title: StudioMedico.eu
   <div class="hero-body">
     <h1 class="title level-item has-text-centered">{{ title }}</h1>
     <p class="subtitle level-item has-text-centered">
+      Medicina Generale Convenzionata col S.S.N. 
+      <br>
       Lo studio si trova in via Antonio Lecchi 19, Milano
       <br><br>
       Si riceve su appuntamento
@@ -32,8 +34,7 @@ title: StudioMedico.eu
     <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>StudioMedico.eu</strong> The website content
-      is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      <strong>StudioMedico.eu</strong> (C) 2022 .
     </p>
   </div>
 </footer>
